# rust-jwt-auth-crud

./: Cargo.toml  docker-compose.yml
src/: _main.rs  _services.rs  handler.rs  jwt_auth.rs  main.rs  services.rs
src/schema/: user.sql
